--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 C:\Users\PC\Documents\eclips-workspace\Algorithm\Algorithm.iml
 C:\Users\PC\Documents\eclips-workspace\Algorithm\untitled104.iml
 /out/
+/.idea/
