--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ C:\Users\PC\Documents\eclips-workspace\Algorithm\Algorithm.iml
 C:\Users\PC\Documents\eclips-workspace\Algorithm\untitled104.iml
 /out/
 /.idea/
+/.idea/codeStyles/
