--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ C:\Users\PC\Documents\eclips-workspace\Algorithm\untitled104.iml
 /out/
 /.idea/
 /.idea/codeStyles/
+/.idea/codeStyles/workspace.xml
