--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,7 @@ C:\Users\PC\Documents\eclips-workspace\Algorithm\untitled104.iml
 /out/
 /.idea/
 /.idea/codeStyles/
-/.idea/codeStyles/workspace.xml
+/.idea/codeStyles/workspace.xml.idea\
+workspace.xml
+codeStyles\
+.idea\
